# analisis-molecular

./: .gitattributes  .gitignore  PLAN.md  PROJECT_CONTEXT.md  README.md  bitacora.md  contexto.md  environment.yml  mcps-repositorio-lab.md  opencode.json  pyproject.toml  requirements.txt
.agents/: AGENTS.md
.claude-flow/github/: store.json
Documentos/: 2026-05-13_PLAN_TRABAJO.md  2026-05-13_lo-que-sabemos-sobre-Poudel2020.md  AIzymes_2025_Merlicek.md
colab/: setup_colab.py
docs/: PLAN_DE_APRENDIZAJE.md  WORKFLOW.md
notebooks/: 00_setup.ipynb  01_pipeline_castpfold.ipynb  01_pipeline_fpocket.ipynb  02_vscode_colab_workflow.ipynb  02_workflow.ipynb  07_boltzmann.ipynb
notebooks/david/: 00_colab_setup.ipynb  01_molecular_analysis_intro.ipynb
notebooks/francisco/: 03_analisis_cavidades_rubisco.ipynb
notebooks/legacy/: 01_intro.ipynb  03_cavidades.ipynb  04_esmfold.ipynb  05_proteinmpnn.ipynb  06_fieldtools.ipynb  08_pipeline.ipynb
papers/: ayzmes_2025.md  poudel_2020.md
scripts/: dev_setup.ps1  sync_to_colab.py
src/libreria_analisismolecular/: __init__.py  ai_zymes.py  castpfold.py  cavidades.py  utils.py
src/libreria_analisismolecular/colab/: __init__.py  drive.py  setup.py  viz.py
tests/: test_colab.py
usuarios/: david.md  francisco.md
