[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libreria_analisismolecular"
version = "0.1.0"
description = "Librería para análisis molecular computacional con integración nativa para Google Colab"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["molecular-analysis", "computational-chemistry", "colab", "cheminformatics"]

authors = [
    {name = "analisismolecular"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.2",
    "tqdm>=4.65",
]

[project.optional-dependencies]
colab = [
    "google-colab>=1.0",
    "ipython>=8.0",
    "ipywidgets>=8.0",
]
full = [
    "torch>=2.0",
    "rdkit-pypi>=2022.9",
    "openbabel>=3.1",
    "mdanalysis>=2.0",
    "prody>=2.0",
    "biopython>=1.81",
    "pymol-open-source>=2.5",
    "nglview>=3.0",
    "plotly>=5.14",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["libreria_analisismolecular*"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.txt", "*.json"]
