[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libreria_analisismolecular"
version = "0.1.0"
description = "Librería para análisis molecular computacional con integración nativa para Google Colab"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["molecular-analysis", "computational-chemistry", "colab", "cheminformatics"]

authors = [
    {name = "analisismolecular"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0,<3.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.2",
    "tqdm>=4.65",
    "castpfoldpy>=0.1",
    "aizymes>=0.1",
    "fair-esm>=2.0",
    "transformers>=4.49",
    "torch>=2.0",
    "biopython>=1.81",
    "prody>=2.0",
    "mdanalysis>=2.0",
]

[project.optional-dependencies]
colab = [
    "google-colab>=1.0",
    "ipython>=8.0",
    "ipywidgets>=8.0",
    "py3Dmol>=2.0",
    "nglview>=3.0",
    "plotly>=5.14",
    "rdkit>=2023.9",
    "condacolab>=0.1",
]
visualization = [
    "py3Dmol>=2.0",
    "nglview>=3.0",
    "plotly>=5.14",
    "ipywidgets>=8.0",
]
chemistry = [
    "rdkit>=2023.9",
    "openbabel>=3.1",
    "mdanalysis>=2.0",
    "prody>=2.0",
    "biopython>=1.81",
]
ai_zymes = [
    "fair-esm>=2.0",
    "transformers>=4.49",
    "torch>=2.0",
    "aizymes>=0.1",
    "castpfoldpy>=0.1",
]
rosetta = [
    "pyrosetta-installer>=0.1",
]
full = [
    "py3Dmol>=2.0",
    "nglview>=3.0",
    "plotly>=5.14",
    "ipywidgets>=8.0",
    "rdkit>=2023.9",
    "openbabel>=3.1",
    "mdanalysis>=2.0",
    "prody>=2.0",
    "biopython>=1.81",
    "pymol-open-source>=2.5",
    "fair-esm>=2.0",
    "transformers>=4.49",
    "torch>=2.0",
    "aizymes>=0.1",
    "castpfoldpy>=0.1",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["libreria_analisismolecular*"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.txt", "*.json"]
