[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libreria_analisismolecular"
version = "0.1.0"
description = "Libreria para analisis molecular computacional con integracion nativa para Google Colab"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["molecular-analysis", "computational-chemistry", "colab", "castpfold"]

authors = [
    {name = "analisismolecular"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.2",
    "tqdm>=4.65",
    "requests>=2.28",
    "biopython>=1.81",
    "prody>=2.0",
]

[project.optional-dependencies]
colab = [
    "py3Dmol>=2.0",
    "nglview>=3.0",
    "plotly>=5.14",
    "rdkit>=2023.9",
    "ipywidgets>=8.0",
]
castpfold = [
    "requests>=2.28",
]
full = [
    "py3Dmol>=2.0",
    "nglview>=3.0",
    "plotly>=5.14",
    "rdkit>=2023.9",
    "ipywidgets>=8.0",
    "mdanalysis>=2.0",
    "pymol-open-source>=2.5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["libreria_analisismolecular*"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.txt", "*.json"]